Update makerspace techs and id for hours

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -32,7 +32,7 @@ order: 3
   </div>
 
   <div class="makerspace__hours">
-    <div class="maker-hours__title">Staffed Hours</div>
+    <div id="makerspace-hours" class="maker-hours__title">Staffed Hours</div>
     <p>You can also check our <a href="/makerspace/#calendar-link">calendar</a> for up-to-date availability.</strong></p>
     <div class="home-maker__hours"> <!-- NB: reused from homepage -->
       {% include makerspace-hours.html %}
@@ -45,11 +45,13 @@ order: 3
     <div class="maker-people__students">
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
-        <span>Catherine Addington:</span>3D Printing, Digital Humanities<br/>
-        <span>Andrew Carl:</span>3D Printing, Electronics, Wearables<br/>
-        <span>Nic Dalton:</span>3D Printing, Modelling<br/>
+        <span>Jordan Buysse:</span>3D Printing, Digital Humanities
+        <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
+        <span>Justine Clougherty:</span>3D Printing
+        <span>Coke Matthews:</span>3D Printing, 3D Modeling
         <span>Brandon Phan:</span>3D Printing<br/>
-        <span>Marysia Serafin:</span>3D Printing
+        <span>Marysia Serafin:</span>3D Printing, 3D Modeling
+        <span>Amrita Singh:</span>3D Printing, Sewing
       </div>
     </div>
     <div class="maker-people__staff">
