--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -33,7 +33,7 @@ order: 3
 
   <div class="makerspace__hours">
     <div id="makerspace-hours" class="maker-hours__title">Staffed Hours</div>
-    <p>You can also check our <a href="/makerspace/#calendar-link">calendar</a> for up-to-date availability.</strong></p>
+    <p>You can also check our <a href="/makerspace/#calendar-link">calendar</a> for up-to-date availability.</p>
     <div class="home-maker__hours"> <!-- NB: reused from homepage -->
       {% include makerspace-hours.html %}
     </div>
@@ -45,20 +45,20 @@ order: 3
     <div class="maker-people__students">
       <div class="maker-students__label">Student Technologists</div>
       <div class="maker-students__list">
-        <span>Jordan Buysse:</span>3D Printing, Digital Humanities
+        <span>Jordan Buysse:</span>3D Printing, Digital Humanities<br/>
         <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
-        <span>Justine Clougherty:</span>3D Printing
-        <span>Coke Matthews:</span>3D Printing, 3D Modeling
+        <span>Justine Clougherty:</span>3D Printing<br/>
+        <span>Coke Matthews:</span>3D Printing, 3D Modeling<br/>
         <span>Brandon Phan:</span>3D Printing<br/>
-        <span>Marysia Serafin:</span>3D Printing, 3D Modeling
-        <span>Amrita Singh:</span>3D Printing, Sewing
+        <span>Marysia Serafin:</span>3D Printing, 3D Modeling<br/>
+        <span>Amrita Singh:</span>3D Printing, Sewing<br/>
       </div>
     </div>
     <div class="maker-people__staff">
       <div class="maker-staff__label">Scholars’ Lab Staff Technologists</div>
       <div class="maker-staff__list">
         <span>Laura Miller:</span>3D Printing, Photogrammetry, Digital Humanities<br/>
-        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities<br/>
+        <span>Ammon Shepherd:</span>3D Printing, Electronics, Programming, Digital Humanities, Sewing<br/>
         <span>Shane Lin:</span>3D Printing, Programming, Digital Humanities<br/>
         <span>Jeremy Boggs:</span>3D Printing, Electronics, Programming, Digital Humanities
       </div>
