--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -75,7 +75,12 @@ order: 3
       <div class="maker-calendar__title">3D Printer Calendar</div>
       <div class="maker-calendar__content">
           <iframe style="border-width: 0;" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;&amp;bgcolor=%23FFFFFF&amp;src=nefg77oelfspfp6n6nbcebdcmk%40group.calendar.google.com&amp;color=%23182C57&amp;src=38slp30pd88dp6o5nfrd88bc7o%40group.calendar.google.com&amp;color=%23AB8B00&amp;src=ani1tnpiol7cpipc5ijuducnc4%40group.calendar.google.com&amp;color=%23ab2671&amp;src=8ik8pipd6r65gn3hurec6ali1c%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FNew_York" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-          <p style="margin-bottom:2em; font-size: 14px; font-weight: bold;"><span style="color:white; background-color: #9643A5; padding: 8px 12px;">Makerspace Hours</span> <span style="color: white; background-color: #536ca6; padding: 8px 12px;">Makerbot – Replicator 2</span> <span style="color: white; background-color: #e0c240; padding: 8px 12px;">Taz 5</span> <span style="color: white; background-color: #ab2671; padding: 8px 12px;">Ultimaker</span></p>
+          <p style="margin-bottom:2em; font-size: 14px; font-weight: bold;">
+            <span style="color:white; background-color: #9643A5; padding: 8px 12px;">Makerspace Hours</span> 
+            <span style="color: white; background-color: #536ca6; padding: 8px 12px;">Makerbot – Replicator 2</span> 
+            <span style="color: white; background-color: #e0c240; padding: 8px 12px;">Taz 5</span> 
+            <!-- <span style="color: white; background&#45;color: #ab2671; padding: 8px 12px;">Ultimaker</span> -->
+          </p>
           <p>Availability of the 3D printers is tracked on this calendar. To schedule a printer, please find an available time by looking at our calendar above. Send an email to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> with the following information:</p>
           <ol>
             <li>your department/major,</li>
