Add CHI documentation page for grant

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -96,12 +96,13 @@ order: 6
 		<div class="spatial-faq__title">Cultural Heritage Informatics</div>
 		<ul class="spatial-faq__list">
 			<ul class="spatial-starting__gis">
-			<h3>Cultural heritage informatics at UVA</h3> 
+			<h3>Cultural heritage informatics at UVA</h3>
 			<li>Visit our <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">cultural heritage informatics</a> page to learn more about our ongoing projects; view our equipment, data, and demos; and access our 3D data repository.</li>
+			<li><a href="/cultural-heritage-informatics-documentation/">Documentation</a> for Cultural Heritage Informatics technologies and methods (funded by UVA Parents Fund)</li>
 			</ul>
 		</ul>
 	</div>
-	
+
 	<div class="spatial__inventory">
 		<div class="spatial-inventory__title">Tools, Data, Equipment</div> <!-- placeholder title -->
 <p>* = by appointment/request only. ^ = not distributed</p>
