--- a/pages/people.html
+++ b/pages/people.html
@@ -156,24 +156,24 @@ nav: true
       </div> <!-- end gallery -->
     </section> <!-- end alumni -->
     
-<section class="people__info">
+<section class="people__staff">
       <!-- section label: -->
-      <div class="people-info__title">
+      <div class="people-staff__title">
         <a id="bio-changes"></a><div></div><span>Updating your info</span><div></div>
       </div>
       <div>
-If your pronouns, name, and/or other info on this and/or your individual bio page should be changed at any point, we’re happy to edit or remove text and/or photos—just let us know! You have a couple options for requesting this, depending on desired confidentiality (please see the "privacy alert" below if you're concerned about others noticing the change):
+<p>If your pronouns, name, and/or other info on this and/or your individual bio page should be changed at any point, we’re happy to edit or remove text and/or photos—just let us know! You have a couple options for requesting this, depending on desired confidentiality (please see the "privacy alert" below if you're concerned about others noticing the change):</p>
+<ul>
+<li>Email scholarslab@virginia.edu (this will go to the inboxes of all current Scholars' Lab staff)</li>
+<li>Email any of the following indvidual staff and they’ll update the site without drawing anyone else’s attention to it: Amanda Visconti (abv6x@virginia.edu), Brandon Walsh (bmw9t@virginia.edu), Jeremy Boggs (jeremy@virginia.edu)</li>
+<li>Ask any of our current staff in person (at UVA, at a conference)</li>
+<li>Call the lab at 434-243-8800 and ask to speak to any current Scholars' Lab staff. Please note that with the Alderman renovation, this number is likely to be the first contact info on this page that breaks. You can always call the main UVA Library phone (434-924-3021) and ask to be transferred to the Scholars' Lab.</li>
+<li>If you're comfortable with GitHub, by making a pull request to our <a href="https://github.com/scholarslab/scholarslab.org">website repo</a></li>
+<li>Any other way you prefer to contact us. Please let us know if you have ideas for more options, or for improving this process!</li>
+</ul>
+<p>Staff will respond to any request to verify it's been received. If you don’t receive a response, that may mean we've missed your message (e.g. staff change, phone numbers change) but we've forgotten to update these directions. Emailing scholarslab@virginia.edu goes to all current SLab staff inboxes, so it will definitely reach us. If you wish to only make your bio update request to a single staffer, you may choose to just point out to scholarslab@virginia.edu that this webpage has outdated contact info, and wait for us to update the contact page before following up with one person on your specific change request.</p>
 
-- Email scholarslab@virginia.edu (this will go to the inboxes of all current Scholars' Lab staff)  
-- Email any of the following indvidual staff and they’ll update the site without drawing anyone else’s attention to it: Amanda Visconti (abv6x@virginia.edu), Brandon Walsh (bmw9t@virginia.edu), Jeremy Boggs (jeremy@virginia.edu)  
-- Ask any of our current staff in person (at UVA, at a conference)  
-- Call the lab at 434-243-8800 and ask to speak to any current Scholars' Lab staff. Please note that with the Alderman renovation, this number is likely to be the first contact info on this page that breaks. You can always call the main UVA Library phone (434-924-3021) and ask to be transferred to the Scholars' Lab.  
-- If you're comfortable with GitHub, by making a pull request to our <a href="https://github.com/scholarslab/scholarslab.org">website repo</a>  
-- Any other way you prefer to contact us. Please let us know if you have ideas for more options, or for improving this process! 
-
-*Staff will respond to any request to verify it's been received.* If you don’t receive a response, that may mean we've missed your message (e.g. staff change, phone numbers change) but we've forgotten to update these directions. Emailing scholarslab@virginia.edu goes to all current SLab staff inboxes, so it will definitely reach us. If you wish to only make your bio update request to a single staffer, you may choose to just point out to scholarslab@virginia.edu that this webpage has outdated contact info, and wait for us to update the contact page before following up with one person on your specific change request.
-
-*Privacy alert:* If you wish to not draw attention to the requested change, please note that this website's GitHub repository (place storing the code underlying this website) is publicly visible, so anyone who understands GitHub could see things such as the code for earlier versions of the site and the list of changes made to the site. We’ll use something like “updated people info” as the commit message (note attached to changed website code/text explaining what was changed and why). Please also note that UVA email and other routes of contact may be monitored or shared with others for legal or technical reasons.
+<p>Privacy alert: If you wish to not draw attention to the requested change, please note that this website's GitHub repository (place storing the code underlying this website) is publicly visible, so anyone who understands GitHub could see things such as the code for earlier versions of the site and the list of changes made to the site. We’ll use something like “updated people info” as the commit message (note attached to changed website code/text explaining what was changed and why). Please also note that UVA email and other routes of contact may be monitored or shared with others for legal or technical reasons.</p>
       </div>
     </section>   
     
