--- a/pages/people.html
+++ b/pages/people.html
@@ -105,7 +105,7 @@ nav: true
 
 <div class="research__description">
 	<div class="research-description__text">
-    <p>We're proud of our wonderful alums! <a href="#bio-changes">Info on requesting changes</a> to your bio is available at the bottom of this page.
+    <p>We're proud of our wonderful alums! <a href="#bio-changes">Info on updating your bio</a> is available at the bottom of this page.
     </p>
 	</div>
 </div> 
@@ -159,7 +159,7 @@ nav: true
 <section class="people__staff">
       <!-- section label: -->
       <div class="people-staff__title">
-        <a id="bio-changes"></a><div></div><span>Updating your info</span><div></div>
+        <a id="bio-changes"></a><div></div><span>Updates</span><div></div>
       </div>
       <div>
 <p>If your pronouns, name, and/or other info on this and/or your individual bio page should be changed at any point, we’re happy to edit or remove text and/or photos—just let us know! You have a couple options for requesting this, depending on desired confidentiality (please see the "privacy alert" below if you're concerned about others noticing the change):</p>
