--- a/pages/people.html
+++ b/pages/people.html
@@ -161,7 +161,7 @@ nav: true
       <div class="people-staff__title">
         <a id="bio-changes"></a><div></div><span>Updates</span><div></div>
       </div>
-      <div>
+<article class=“page-wrapper”>
 <p>If your pronouns, name, and/or other info on this and/or your individual bio page should be changed at any point, we’re happy to edit or remove text and/or photos—just let us know! You have a couple options for requesting this, depending on desired confidentiality (please see the "privacy alert" below if you're concerned about others noticing the change):</p>
 <ul>
 <li>Email scholarslab@virginia.edu (this will go to the inboxes of all current Scholars' Lab staff)</li>
@@ -174,7 +174,7 @@ nav: true
 <p>Staff will respond to any request to verify it's been received. If you don’t receive a response, that may mean we've missed your message (e.g. staff change, phone numbers change) but we've forgotten to update these directions. Emailing scholarslab@virginia.edu goes to all current SLab staff inboxes, so it will definitely reach us. If you wish to only make your bio update request to a single staffer, you may choose to just point out to scholarslab@virginia.edu that this webpage has outdated contact info, and wait for us to update the contact page before following up with one person on your specific change request.</p>
 
 <p>Privacy alert: If you wish to not draw attention to the requested change, please note that this website's GitHub repository (place storing the code underlying this website) is publicly visible, so anyone who understands GitHub could see things such as the code for earlier versions of the site and the list of changes made to the site. We’ll use something like “updated people info” as the commit message (note attached to changed website code/text explaining what was changed and why). Please also note that UVA email and other routes of contact may be monitored or shared with others for legal or technical reasons.</p>
-      </div>
+      </article>
     </section>   
     
   </article> <!-- end main content -->
