--- a/pages/people.html
+++ b/pages/people.html
@@ -161,7 +161,7 @@ nav: true
       <div class="people-staff__title">
         <a id="bio-changes"></a><div></div><span>Updates</span><div></div>
       </div>
-<article class=“page-wrapper”>
+<div class=“page-wrapper”>
 <p>If your pronouns, name, and/or other info on this and/or your individual bio page should be changed at any point, we’re happy to edit or remove text and/or photos—just let us know! You have a couple options for requesting this, depending on desired confidentiality (please see the "privacy alert" below if you're concerned about others noticing the change):</p>
 <ul>
 <li>Email scholarslab@virginia.edu (this will go to the inboxes of all current Scholars' Lab staff)</li>
@@ -177,5 +177,5 @@ nav: true
       </article>
     </section>   
     
-  </article> <!-- end main content -->
+  </div>
 </div> <!-- end wrapper -->
