Update the thumbs

--- a/pages/work.html
+++ b/pages/work.html
@@ -69,7 +69,7 @@ order: 3
       </div> <!-- end gallery -->
     </section> <!-- end staff -->
 
-		<section class="people__staff">
+		<section class="people__staff" id="student-projects-archive">
 			<!-- section label: -->
 			<h2 style="padding-left: 2em; padding-top: 1em; margin-bottom: 0;">Student Projects</h2>
 			<div class="people-staff__gallery">
