Should finally fix the thing

--- a/pages/work.html
+++ b/pages/work.html
@@ -55,7 +55,7 @@ order: 3
           <a href="/work/{{ project.slug }}/" aria-label="{{ project.title }}">
             <div class="people-item__img">
 
-            <img src="{{ site.url }}{{ '/assets/img/work/' | append: project.thumb-img }}" alt="{{ project.title }}">
+            <img src="{{ '/assets/img/work/' | append: project.thumb-img }}" alt="{{ project.title }}">
 
             </div>
             <div class="people-item__name">
@@ -82,7 +82,7 @@ order: 3
 					<a href="/work/{{ project.slug }}/" aria-label="{{ project.title }}">
 						<div class="people-item__img">
 
-						<img src="{{ site.url }}{{ '/assets/img/work/' | append: project.thumb-img }}" alt="{{ project.title }}">
+						<img src="{{ '/assets/img/work/' | append: project.thumb-img }}" alt="{{ project.title }}">
 
 						</div>
 						<div class="people-item__name">
