Update calendar and page text

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -25,9 +25,25 @@ order: 3
   <div class="makerspace__ethos">
     <div class="maker-ethos__title">Ethos</div>
     <div class="maker-ethos__text">
-      <p>The Scholars&#8217; Lab Makerspace is a place for crafting, tinkering, and experimentation with technologies like 3D printing, sewing, physical computing, and augmented reality. <strong>Open to everyone</strong>&mdash;absolutely no prior experience or fee needed!&mdash;we specialize in hands-on approaches to research questions in the humanities and arts.</p>
-      <p>Informed by a rich tradition of Library support for exploring materiality in <a href="http://smallnotes.library.virginia.edu/">Special Collections</a> and the Fine Arts Library <a href="http://uvamagazine.org/articles/the_tactile_library">Materials Collection</a>, and for participating in the physical-made-digital in both the <a href="http://scholarslab.org/">Scholars&#8217; Lab</a> and the <a href="https://www.library.virginia.edu/hours#robertson-media-center">Robertson Media Center</a> in Clemons, our Makerspace Technologists can help faculty and student researchers evaluate new approaches to their work, and consider both the hows and the whys of making.</p>
-      <p>Learning <i>how</i> to do something with humanities technology gives us a more informed perspective on <i>why</i> we do things in the humanities. <strong>Both are vital.</strong></p>
+      <p>The Scholars&#8217; Lab Makerspace is a place for crafting, tinkering,
+      and experimentation with technologies like 3D printing, sewing, physical
+      computing, and augmented reality. <strong>Open to
+          everyone</strong>&mdash;absolutely no prior experience needed and no
+      fees!&mdash;we specialize in hands-on approaches to research questions in
+      the humanities and arts.</p>
+      <p>Informed by a rich tradition of Library support for exploring
+      materiality in <a href="http://smallnotes.library.virginia.edu/">Special
+      Collections</a> and the Fine Arts Library <a
+  href="http://uvamagazine.org/articles/the_tactile_library">Materials
+  Collection</a>, and for participating in the physical-made-digital in both
+  the <a href="http://scholarslab.org/">Scholars&#8217; Lab</a> and the <a
+  href="https://www.library.virginia.edu/hours#robertson-media-center">Robertson
+  Media Center</a> in Clemons, our Makerspace Technologists can help faculty
+  and student researchers evaluate new approaches to their work, and consider
+  both the hows and the whys of making.</p> <p>Learning <i>how</i> to do
+  something with humanities technology gives us a more informed perspective on
+  <i>why</i> we do things in the humanities. <strong>Both are
+  vital.</strong></p>
     </div>
   </div>
 
@@ -50,7 +66,6 @@ order: 3
         <span>Justine Clougherty:</span>3D Printing<br/>
         <span>Coke Matthews:</span>3D Printing, 3D Modeling<br/>
         <span>Brandon Phan:</span>3D Printing<br/>
-        <span>Marysia Serafin:</span>3D Printing, 3D Modeling<br/>
         <span>Amrita Singh:</span>3D Printing, Sewing<br/>
       </div>
     </div>
@@ -68,36 +83,73 @@ order: 3
   <div class="makerspace__usage">
     <div class="maker-usage__title">Using the Makerspace</div>
     <div class="maker-usage__content"> <!-- split internally per prototype drawing -->
-      <p>Interested in exploring the Makerspace?  Have an idea to use microcontrollers or 3D modeling and printing technology to enhance your research or differently interrogate your assumptions?  Check out our printer availability on our printer calendar. Stop by to talk to one of our Technologists, attend our maker <a href="http://scholarslab.org/events/">workshops</a>, or contact us at <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to schedule an appointment with a Makerspace Technologist or Scholars&#8217; Lab staff to discuss your planned project.</p>
-    </div>
+      <p>Interested in exploring the Makerspace?  Have an idea to use
+      microcontrollers or 3D modeling and printing technology to enhance your
+  research or differently interrogate your assumptions?  Stop by to talk to one
+  of our Technologists, attend our maker <a
+  href="http://scholarslab.org/events/">workshops</a>, or contact us at <a
+  href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to
+  schedule an appointment with a Makerspace Technologist or Scholars&#8217; Lab
+  staff to discuss your planned project.</p> </div>
   </div>
   <div class="makerspace__calendar" id="calendar-link">
       <div class="maker-calendar__title">3D Printer Calendar</div>
       <div class="maker-calendar__content">
-          <iframe style="border-width: 0;" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;&amp;bgcolor=%23FFFFFF&amp;src=nefg77oelfspfp6n6nbcebdcmk%40group.calendar.google.com&amp;color=%23182C57&amp;src=38slp30pd88dp6o5nfrd88bc7o%40group.calendar.google.com&amp;color=%23AB8B00&amp;src=ani1tnpiol7cpipc5ijuducnc4%40group.calendar.google.com&amp;color=%23ab2671&amp;src=8ik8pipd6r65gn3hurec6ali1c%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FNew_York" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+          <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=OGlrOHBpcGQ2cjY1Z24zaHVyZWM2YWxpMWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=MDlrbTk5cDBwam9sZTg0dmZpY2s3NnFuaG0yOGRsbWVAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=bXBtZmNvY3FmY2phNjhoYzY5NzRwbGdmNW44YWc4YTlAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=amoyMHBxZGhxbHV2a29jbG5ydmdraDVnOWR0a3UyZGRAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%235C1158&amp;color=%23be6d00&amp;color=%23536ca6&amp;color=%23e0c240&amp;title=Scholars&#39;%20Lab%203D%20Printer%20Calendar&amp;showNav=1&amp;showDate=1&amp;mode=WEEK&amp;showTz=0&amp;showCalendars=0&amp;showPrint=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+          <!-- calendar colors used above have to be Google's specific color codes for calendar. -->
+
           <p style="margin-bottom:2em; font-size: 14px; font-weight: bold;">
-            <span style="color:white; background-color: #9643A5; padding: 8px 12px;">Makerspace Hours</span> 
-            <span style="color: white; background-color: #536ca6; padding: 8px 12px;">Makerbot – Replicator 2</span> 
-            <span style="color: white; background-color: #e0c240; padding: 8px 12px;">Taz 5</span> 
+            <span style="color: white; background-color: #C244AB; padding: 8px 12px;">Makerspace Hours</span> 
+            <span style="color: white; background-color: #536CA6; padding: 8px 12px;">Makerbot Replicator 2</span> 
+            <span style="color: white; background-color: #e0c240; padding: 8px 12px;">Lulzbot Taz 5</span> 
+            <span style="color: white; background-color: #F2A640; padding: 8px 12px;">Prusa i3 MK3S</span> 
             <!-- <span style="color: white; background&#45;color: #ab2671; padding: 8px 12px;">Ultimaker</span> -->
           </p>
-          <p>Availability of the 3D printers is tracked on this calendar. To schedule a printer, please find an available time by looking at our calendar above. Send an email to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> with the following information:</p>
-          <ol>
-            <li>your department/major,</li>
-            <li>the estimated number of hours it will take to complete your print (you are required to remain for the entire print time unless other arrangements are made),</li>
-            <li>which printer you’d like to use (if you have a preference),</li>
-            <li>if you need help preparing a 3D model for printing,</li>
-            <li>a brief description of the item you are printing or URL to object from a website (thingiverse.com, etc).</li>
-        </ol>
+          <p>Availability of the 3D printers is reflected on this calendar, but
+          is not always accurate. To see accurate avialability, click one of
+          the printer links below.</p>
+
+          <h3>Schedule a Printer</h3>
+          <p>Schedule a printer by clicking on the link for the printer below,
+          and fill out the form with the desired times.
+          <ul>
+              <li><a href="https://cal.lib.virginia.edu/equipment/item/29609">Lulzbot Taz 5</a></li>
+              <li><a href="https://cal.lib.virginia.edu/equipment/item/29608">Makerbot Replicator 2</a></li>
+              <li><a href="https://cal.lib.virginia.edu/equipment/item/51349">Prusa i3 MK3S</a></li>
+          </ul>
+          
+          <p>If you have any questions, send an email to <a
+              href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a></p>
+
         <h2>Makerspace Rules of Use</h2> 
-        <p>You must schedule a printer and your print must be approved in advance of printing. By making a reservation, you agree to the following:</p>
-<ol>
-<li>Items that may not be printed include but are not limited to: models which are defective or unsuited for FDM printing, models of weapons and their accessories, copyrighted materials, or items designed for mass production and/or commercial use. Staff technologists reserve the right to cancel or refuse a print at any time.</li>
-  <li>Unscheduled printers can be reserved by walk-ins on a first-come first-served basis.</li>
-  <li>If you do not arrive within 15 minutes of the start of your of reservation, you may lose your print time.</li>
-  <li>You must regularly monitor your print, and be available to remove it before the Makerspace closes.  Prints cannot run outside of staffed hours.</li>
-  <li>Makerspace printers are intended for educational and experimentation purposes. Priority will be given to the UVA community users. Printing is currently free, but the staff reserves the right to ask users to supply their own filament for ongoing or large jobs.</li>
-</ol>           
+        <p>You must schedule a printer and your print must be approved in
+        advance of printing. By making a reservation, you agree to the
+            following:</p> 
+            <ol>
+                <li>Items that may not be printed include but are not limited
+                to: models which are defective or unsuited for FDM printing,
+                models of weapons and their accessories, copyrighted materials,
+                or items designed for mass production and/or commercial use.
+                Staff technologists reserve the right to cancel or refuse a
+                print at any time.</li> 
+
+                <li>Unscheduled printers can be reserved by walk-ins on a
+                first-come first-served basis.</li>
+
+                <li>If you do not arrive within 15 minutes of the start of your
+                of reservation, you may lose your print time.</li> 
+
+                <li>You must regularly monitor your print, and be available to
+                remove it before the Makerspace closes.  Prints cannot run
+                outside of staffed hours.</li>
+
+                <li>Makerspace printers are intended for educational and
+                experimentation purposes. Priority will be given to the UVA
+                community users. Printing is currently free, but the staff
+                reserves the right to ask users to supply their own filament
+                for ongoing or large jobs.</li> 
+            </ol>
+
         <p>If you have any questions, please do ask us! We enjoy helping folks figure out how to use our Makerspace.</p>
       </div>
   </div>
