Update hours, printer reservation, techs info

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -63,10 +63,11 @@ order: 3
       <div class="maker-students__list">
         <span>Jordan Buysse:</span>3D Printing, Digital Humanities<br/>
         <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
-        <span>Justine Clougherty:</span>3D Printing<br/>
+        <span>Grant Kim:</span>3D Printing</br/>
+        <span>Carla Ma:</span>3D Printing<br/>
         <span>Coke Matthews:</span>3D Printing, 3D Modeling<br/>
         <span>Brandon Phan:</span>3D Printing<br/>
-        <span>Amrita Singh:</span>3D Printing, Sewing<br/>
+        <span>Dipsikha Thakur:</span>3D Printing, Textiles<br/>
       </div>
     </div>
     <div class="maker-people__staff">
@@ -109,19 +110,29 @@ order: 3
           is not always accurate. To see accurate avialability, click one of
           the printer links below.</p>
 
-          <h3>Schedule a Printer</h3>
-          <p>Schedule a printer by clicking on the link for the printer below,
-          and fill out the form with the desired times.
-          <ul>
-              <li><a href="https://cal.lib.virginia.edu/equipment/item/29609">Lulzbot Taz 5</a></li>
-              <li><a href="https://cal.lib.virginia.edu/equipment/item/29608">Makerbot Replicator 2</a></li>
-              <li><a href="https://cal.lib.virginia.edu/equipment/item/51349">Prusa i3 MK3S</a></li>
-          </ul>
+          <h3>Schedule a 3D Printer</h3>
+          <p>Scheduling a 3D printer is now a two step process. This helps us
+          align with Library practices and helps us better track our printer
+          usage.</p>
+          <ol>
+              <li>Email <a
+                  href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>
+              to set up a time to get trained on one or all of our 3D printers.
+              Plan on 30 minutes of training. If you like, you can request to
+              reserve a printer for use after your training. Just specify that
+              in your email.</li>
+              <li>After you have been trained, your computing ID will be put
+              on a white list for the printer(s) on which you were trained.
+              After that you can register to use a printer using this website:
+              <a
+                  href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">https://cal.lib.virginia.edu/reserve/SLab3DPrinters</a>
+              </li>
+          </ol>
           
           <p>If you have any questions, send an email to <a
               href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a></p>
 
-        <h2>Makerspace Rules of Use</h2> 
+        <h3>3D Printer Rules of Use</h3> 
         <p>You must schedule a printer and your print must be approved in
         advance of printing. By making a reservation, you agree to the
             following:</p> 
