Update carla - clara

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -64,7 +64,7 @@ order: 3
         <span>Jordan Buysse:</span>3D Printing, Digital Humanities<br/>
         <span>Andrew Carl:</span>3D Printing, 3D Modeling, Electronics, Wearables<br/>
         <span>Grant Kim:</span>3D Printing</br/>
-        <span>Carla Ma:</span>3D Printing<br/>
+        <span>Clara Ma:</span>3D Printing<br/>
         <span>Coke Matthews:</span>3D Printing, 3D Modeling<br/>
         <span>Brandon Phan:</span>3D Printing<br/>
         <span>Dipsikha Thakur:</span>3D Printing, Textiles<br/>
@@ -100,10 +100,10 @@ order: 3
           <!-- calendar colors used above have to be Google's specific color codes for calendar. -->
 
           <p style="margin-bottom:2em; font-size: 14px; font-weight: bold;">
-            <span style="color: white; background-color: #C244AB; padding: 8px 12px;">Makerspace Hours</span> 
-            <span style="color: white; background-color: #536CA6; padding: 8px 12px;">Makerbot Replicator 2</span> 
-            <span style="color: white; background-color: #e0c240; padding: 8px 12px;">Lulzbot Taz 5</span> 
-            <span style="color: white; background-color: #F2A640; padding: 8px 12px;">Prusa i3 MK3S</span> 
+            <span style="color: white; background-color: #C244AB; padding: 8px 12px;">Makerspace Hours</span>
+            <span style="color: white; background-color: #536CA6; padding: 8px 12px;">Makerbot Replicator 2</span>
+            <span style="color: white; background-color: #e0c240; padding: 8px 12px;">Lulzbot Taz 5</span>
+            <span style="color: white; background-color: #F2A640; padding: 8px 12px;">Prusa i3 MK3S</span>
             <!-- <span style="color: white; background&#45;color: #ab2671; padding: 8px 12px;">Ultimaker</span> -->
           </p>
           <p>Availability of the 3D printers is reflected on this calendar, but
@@ -128,27 +128,27 @@ order: 3
                   href="https://cal.lib.virginia.edu/reserve/SLab3DPrinters">https://cal.lib.virginia.edu/reserve/SLab3DPrinters</a>
               </li>
           </ol>
-          
+
           <p>If you have any questions, send an email to <a
               href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a></p>
 
-        <h3>3D Printer Rules of Use</h3> 
+        <h3>3D Printer Rules of Use</h3>
         <p>You must schedule a printer and your print must be approved in
         advance of printing. By making a reservation, you agree to the
-            following:</p> 
+            following:</p>
             <ol>
                 <li>Items that may not be printed include but are not limited
                 to: models which are defective or unsuited for FDM printing,
                 models of weapons and their accessories, copyrighted materials,
                 or items designed for mass production and/or commercial use.
                 Staff technologists reserve the right to cancel or refuse a
-                print at any time.</li> 
+                print at any time.</li>
 
                 <li>Unscheduled printers can be reserved by walk-ins on a
                 first-come first-served basis.</li>
 
                 <li>If you do not arrive within 15 minutes of the start of your
-                of reservation, you may lose your print time.</li> 
+                of reservation, you may lose your print time.</li>
 
                 <li>You must regularly monitor your print, and be available to
                 remove it before the Makerspace closes.  Prints cannot run
@@ -158,7 +158,7 @@ order: 3
                 experimentation purposes. Priority will be given to the UVA
                 community users. Printing is currently free, but the staff
                 reserves the right to ask users to supply their own filament
-                for ongoing or large jobs.</li> 
+                for ongoing or large jobs.</li>
             </ol>
 
         <p>If you have any questions, please do ask us! We enjoy helping folks figure out how to use our Makerspace.</p>
@@ -260,7 +260,7 @@ order: 3
     <!--div>Diagram!!!</div-->
     <div class="maker-diagram__img"><img src="../assets/img/svg/alderman-floorplan.svg" alt="Makerspace dummy floorplan">
     {% include makerspace-floorplan.html %}</div>
-    <p id="makerspace-location-label">Makerspace and Public Space, 4th Floor Alderman</p> 
+    <p id="makerspace-location-label">Makerspace and Public Space, 4th Floor Alderman</p>
   </div>
 
   <div class="makerspace__questions">
