Update equipement info

--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -171,14 +171,13 @@ order: 3
       <!-- 3D Printing -->
       <ul class="maker-list__3d">
         <span>3D Printing</span>
-        <li>FDM 3D Printers: MakerBot Replicator 2, Ultimaker 2, Lulzbot TAZ 5</li>
+        <li>FDM 3D Printers: MakerBot Replicator 2, Ultimaker 2, Lulzbot TAZ 5, Prusa i3 MK3S</li>
         <li>SLA 3D Printer: Formlabs Form 2 (available for use with staff assistance only)</li>
         <li>Assortment of FDM 3D printer filaments</li>
       </ul>
       <!-- VR/AR/3D -->
       <ul class="maker-list__vr-ar">
-        <span>VR, AR, & 3D Scanning</span>
-        <li>NextEngine Desktop 3D laser scanner</li>
+        <span>VR, AR</span>
         <li>Oculus Rift DK1 Development KitsMicrosoft</li>
         <li>HoloLens</li>
         <li>Google Cardboard classroom set</li>
@@ -186,13 +185,13 @@ order: 3
       <!-- Physical Computing -->
       <ul class="maker-list__physical">
         <span>Physical Computing</span>
-        <li>Sparkfun Arduino kits, with Arduino UNO boards and an assortment of Arduino shields.</li>
-        <li>Raspberry Pi</li>
+        <li>Sparkfun Arduino kits, with Arduino UNO and 101 boards and an assortment of Arduino shields.</li>
+        <li>Raspberry Pi version 3 and Zero W</li>
       </ul>
       <!-- Textiles, Wearables - Learn how to take fashion into the future. -->
       <ul class="maker-list__wearables">
         <span>Textiles & Wearables</span>
-        <li>Bernini sewing machines + serger</li>
+        <li>Bernina B 350 sewing machines + Juki MO-644D serger</li>
         <li>Basic supplies for wearables and tactile computing</li>
         <li>Felt</li>
         <li>Sewing needles and thread</li>
@@ -268,4 +267,3 @@ order: 3
   </div>
 </div> <!-- end main content -->
 
-<!-- Check out [http://makergrounds.virginia.edu](http://makergrounds.virginia.edu) for other Makerspaces, shops, labs, and places for making at UVA. -->
