--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@ title: Home
 					<p>We offer a variety of <a href="/for-students/">fellowships and opportunities</a> to this end, which collectively aim to support graduate students during the full measure of their time at UVA.</p>
 					<p>From the innovative <a href="http://praxis.scholarslab.org/">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</p>
 				</div>
-
 				<div class="home-student__cta"><a href="/for-students/">See all</a></div>
-
 			</div>
-			<div class="home-student__img-container" title="Placeholder image"><img src="{{ 'assets/img/decorative/for-students.jpg' | relative_url }}" id="for-students-image"></div>
+			<div class="home-student__img-container" title="Placeholder image">
+				<img src="{{ 'assets/img/decorative/for-students.jpg' | relative_url }}" id="for-students-image" alt="Group of student outside, looking at a laptop computer" />
+			</div>
 		</section>
 
 		<!-- makerspace -->
